--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="founded">Founded</string>
     <string name="titles">Titles</string>
     <string name="failure_network">Couldn\'t connect to server, check your network</string>
+    <string name="back">Back</string>
 </resources>
